# BV2017

./: Aufgabe_3.cpp  Aufgabe_4.1.cpp  Aufgabe_4.2.cpp  Aufgabe_5.cpp  Aufgabe_6.cpp  CMakeLists.txt  help.cpp
